[metadata]
name = get_media_files
author = jtara1
author-email = jtara@tuta.io
summary = Get information such as type, duration, or resolution from files
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/jtara1/get_media_files
license = Apache-2
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    get_media_files

[pbr]
autodoc_tree_index_modules = True

[build_sphinx]
builders = html,man
source-dir = doc/source
build-dir = doc/build
all-files = 1
warning-is-error = 1

[entry_points]
console_scripts =
    get_media_files = get_media_files:main
get_media_files.config.drivers =
    main_driver = get_media_files:GetMediaFiles